--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.9.4",
     "axios": "^1.5.1",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
@@ -21,14 +23,15 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.68.0",
     "scss": "^0.2.4",
     "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
